--- a/proyecto-03/nnn-movies-back/package.json
+++ b/proyecto-03/nnn-movies-back/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "fake-data-generator": "^0.4.3",
