--- a/proyecto-03/proy03-back/package.json
+++ b/proyecto-03/proy03-back/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "fake-data-generator": "^0.4.3",
     "morgan": "~1.9.1",
     "sequelize": "^6.21.3",
     "sequelize-auto": "^0.8.8",
